timestamp microservice added

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "fcc-api-projects-boilerplate",
-  "version": "0.0.1",
+  "name": "timestamp-microservice",
+  "version": "1.0.0",
   "description": "An FCC Backend Challenge",
   "main": "index.js",
   "scripts": {
